@@ -2,6 +2,10 @@ Revision history for Hailo
 
 {{$NEXT}}
 
+    - The regular expression introduced in 0.44 to check if a word was
+      of MiXeD CaSe was pathological. Changed it to a simpler one that
+      works better.
+
 0.44 2010-05-27 15:55:30
 
     - Removed the backwards-compatible "Pg" and "mysql" aliases for
